feat: Resilience, LLM Routing fixes, Professional SQL, and Enhanced Onboarding

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -78,6 +78,8 @@ services:
       COMPANY_ID: ${COMPANY_ID:-00000000-0000-0000-0000-000000000001}
       LOG_LEVEL: ${LOG_LEVEL:-info}
       HEARTBEAT_INTERVAL_SECONDS: ${HEARTBEAT_INTERVAL_SECONDS:-30}
+      TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN:-}
+      TELEGRAM_USER_ID: ${TELEGRAM_USER_ID:-}
       FEATURE_SKILLS: ${FEATURE_SKILLS:-true}
       FEATURE_TELEGRAM: ${FEATURE_TELEGRAM:-false}
       FEATURE_BROWSER: ${FEATURE_BROWSER:-true}
